--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "winesupplychain",
   "version": "1.0.0",
-  "description": "## Installation Steps",
+  "description": "Simple Wine Supply Chain - Udacity Nanodegree Project",
   "main": "src/js/app.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
     "bignumber.js": "^8.1.1",
-    "solc": "^0.5.0",
-    "truffle-hdwallet-provider": "^1.0.8",
-    "web3": "^1.0.0-beta.54"
+    "truffle-hdwallet-provider": "^1.0.8"
   },
   "devDependencies": {
     "lite-server": "^2.4.0"
